# home_cockpit

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  tests-ci.yml
doc/: com.drawio
pc/com/: interface.py  packet.py
pc/msfs/: interface.py
pc/protocol/: packet.py
pc/tests/: test_packet.py
simu/: aircraft_vars_reader.py
simu/aircraft_vars/: radio.yaml
simu/tests/: test_vars_reader.py  testfile_ok.yaml
stm32/: .extSettings  .gitignore  STM32H747I-EVAL.ioc  changelog.txt  readme.md
stm32/CM4/Core/Src/: main.c
stm32/CM7/Core/Inc/: main.h  main_user.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
stm32/CM7/Core/Src/: main.c  main_user.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
stm32/CM7/TouchGFX/: ApplicationTemplate.touchgfx.part  msfs_test.touchgfx
stm32/Drivers/BSP/STM32H747I-EVAL/: stm32h747i_eval_bus.h  stm32h747i_eval_conf.h  stm32h747i_eval_lcd.c  (+2 more)
stm32/EWARM/: Project.eww  STM32H747I-EVAL.ewd  STM32H747I-EVAL.ewp  stm32h747xx_flash_CM7.icf
stm32/MDK-ARM/: STM32H747I-EVAL.uvoptx  STM32H747I-EVAL.uvprojx  stm32h747xx_flash_CM7.sct
stm32/STM32CubeIDE/: .project
stm32/STM32CubeIDE/CM4/: .cproject  .project  STM32H747I-EVAL_CM4 Debug.launch  STM32H747XIHX_FLASH.ld  STM32H747XIHX_RAM.ld
stm32/STM32CubeIDE/CM7/: .cproject  .project  STM32H747I-EVAL_CM7 Debug.launch  STM32H747XIHX_FLASH.ld
stm32/gcc/: STM32H747XIHx_FLASH_CM7.ld  makefile_cm4  makefile_cm7
typings/SimConnect/: Attributes.pyi  Constants.pyi  Enum.pyi  EventList.pyi  FacilitiesList.pyi  RequestList.pyi  SimConnect.pyi  __init__.pyi
(+9 files in other folders)
